fix sider overflow issue

--- a/src/components/Main.scss
+++ b/src/components/Main.scss
@@ -16,3 +16,8 @@
     display: block;
   }
 }
+
+.sider-container {
+  height: 100%;
+  overflow-y: scroll;
+}
